# mems-storage

./: .env-non-dev  .env-non-dev_example  .env_example  .gitignore  Makefile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  test.js  test.py  wget-log
api/: .env-example  Dockerfile  Makefile  README.md  alembic.ini  config.py  database.py  db.json  hh.py  main.py  models.py  parse.py  pyproject.toml  schemas.py  session_name.session  session_name.session-journal
api/alembic/: env.py
api/alembic/versions/: 0c8363644847_add_is_new_user.py  0efe72d47194_initial_migration.py  1dfceecccd27_initial_migration7.py  24e39880c9a5_add_landing_to_visit.py  3702cd022b64_initial_migration.py  38ad202ea3dd_rm_url_field.py  3b9a78529baf_add_visit.py  3c8dba32a169_add_published.py  3cd43f8976ba_add_preview.py  4906eacc39d4_initial_migration.py  55f72f6bc44a_initial_migration2.py  5e52cab7336c_add_link.py  5e64b30a7340_initial_migration2.py  608cc08d8e4c_add_labels_m2m_back_populates.py  6f0c3f50be39_rm_author_category.py  72b3fdb8edf8_add_ip_to_visit.py  7977bd4a2946_.py  7e22104520f9_initial_migration.py  7eae7932dfb4_initial_migration6.py  7f21c4828740_add_sourses.py  7fff1f4527a0_add_labels_m2m.py  87e07c894be8_add_labels_m2m_back_populates2.py  88367997b77a_initial_migration2.py  9742bfbcea59_add_is_admin.py  9b5b222c20c8_add_name.py  9ef554bff5ef_add_checked_to_memes.py  a0f5480714ab_add_messages.py  a69c625ece84_initial_migration4.py  aa1d5b218a8b_initial_migration.py  ab24c35180f9_initial_migration2.py  b0b7f4e3023c_init.py  bf1b3717bf75_add_labels_m2m_back_populates3.py  cd4acac39d08_rm_email_field.py  cd5df3133802_initial_migration2.py  ce98f959d269_initial_migration.py  d7e27de30652_add_user.py  e7ca1c3418c4_initial_migration.py  ed5d3f678b71_initial_migration3.py  f3697632dc4b_initial_migration5.py  f7fea55b4c60_initial_migration.py
api/app/: admin.py  congif.py  main.py  save.py
api/app/aiogram_bot/: commands.py  main.py  (+4 more)
api/routers/: memes.py
storage/: Dockerfile  Makefile  README.md  app.py  handler.py  main.py  pyproject.toml
storage/app/: main.py
(+180 files in other folders)
